EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/Cuenta_Interno__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Interno__c</fullName>
    <formula>Opportunity__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta (Interno)</label>
    <type>Text</type>
</CustomField>