EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/CURP__c.field-meta.xml
<CustomField>
    <fullName>CURP__c</fullName>
    <label>CURP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>