EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/Direccion_de_escuela_de_procedencia__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_escuela_de_procedencia__c</fullName>
    <label>Dirección de escuela de procedencia</label>
    <type>TextArea</type>
</CustomField>