EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/Email_del_tutor__c.field-meta.xml
<CustomField>
    <fullName>Email_del_tutor__c</fullName>
    <label>Email del tutor</label>
    <type>Email</type>
</CustomField>