EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/hed__Applicant__c.field-meta.xml
<CustomField>
    <fullName>hed__Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact applying to the institution or program.</description>
    <inlineHelpText>El contacto que solicita ante la institución o programa.</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Applicant)</relationshipLabel>
    <relationshipName>Applications_Applicant</relationshipName>
    <type>Lookup</type>
</CustomField>