EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/hed__Applicant_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Applicant_Decision_Date__c</fullName>
    <description>The date when the student decides whether to enroll.</description>
    <inlineHelpText>La fecha en la que el estudiante decide inscribirse.</inlineHelpText>
    <label>Applicant Decision Date</label>
    <type>Date</type>
</CustomField>