EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/hed__Application_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Application_Decision_Date__c</fullName>
    <description>The date when the institution decides whether to accept the applicant.</description>
    <inlineHelpText>La fecha cuando la institución decide aceptar o no al solicitante.</inlineHelpText>
    <label>Application Decision Date</label>
    <type>Date</type>
</CustomField>