EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/hed__Preparer__c.field-meta.xml
<CustomField>
    <fullName>hed__Preparer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact preparing the application, often a guardian.</description>
    <inlineHelpText>El contacto preparando la solicitud. Por ejemplo, un tutor o una persona que asiste a alguien con necesidades especiales.</inlineHelpText>
    <label>Preparer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Preparer)</relationshipLabel>
    <relationshipName>Applications_Preparer</relationshipName>
    <type>Lookup</type>
</CustomField>