EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/hed__Term__c.field-meta.xml
<CustomField>
    <fullName>hed__Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The term when the applicant wants to enroll.</description>
    <inlineHelpText>El plazo en el que el solicitante desea inscribirse.</inlineHelpText>
    <label>Term</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>