EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/Nivel_Escolar__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Escolar__c</fullName>
    <label>Nivel Escolar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepa UMM</fullName>
            </value>
            <value>
                <fullName>Profesional</fullName>
            </value>
            <value>
                <fullName>Maestria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>