EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/Nombre_del_alumno__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_alumno__c</fullName>
    <label>Nombre del alumno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>