EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/Orientacion_vocacional__c.field-meta.xml
<CustomField>
    <fullName>Orientacion_vocacional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orientación vocacional</label>
    <type>Checkbox</type>
</CustomField>