EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/Origen_del_informe__c.field-meta.xml
<CustomField>
    <fullName>Origen_del_informe__c</fullName>
    <label>Origen del informe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visita a escuela</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Referido</fullName>
            </value>
            <value>
                <fullName>Convenio empresa</fullName>
            </value>
            <value>
                <fullName>Soy exalumno</fullName>
            </value>
            <value>
                <fullName>Me contactaron por teléfono</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>