EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/PersonBirthdate__c.field-meta.xml
<CustomField>
    <fullName>PersonBirthdate__c</fullName>
    <label>Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>