EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/Plazo_Programa__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Programa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plazo (Programa)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Term__c.hed__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Programa_Academico__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Solicitudes (Plazo (Programa))</relationshipLabel>
    <relationshipName>Solicitudes</relationshipName>
    <type>Lookup</type>
</CustomField>