EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/Programa_Academico__c.field-meta.xml
<CustomField>
    <fullName>Programa_Academico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programa Académico</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selección no es Programa académico</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>0125e000001QrAVAA0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitudes (Programa Académico)</relationshipLabel>
    <relationshipName>Solicitudes</relationshipName>
    <type>Lookup</type>
</CustomField>