EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/Telefono_fijo__c.field-meta.xml
<CustomField>
    <fullName>Telefono_fijo__c</fullName>
    <label>Teléfono fijo</label>
    <type>Phone</type>
</CustomField>