EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/fields/Tipo_de_escuela__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_escuela__c</fullName>
    <label>Tipo de escuela</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escuela particular</fullName>
            </value>
            <value>
                <fullName>Escuela de gobierno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>