EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Application__c/listViews/hed__All.listView-meta.xml
<ListView>
    <fullName>hed__All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Nombre_del_alumno__c</columns>
    <columns>PersonEmail__c</columns>
    <columns>hed__Applying_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>